qlcplus (4.12.5) stable; urgency=low

  * engine: add support for 16bit fading
  * engine: add support for Scene pausing
  * engine: consider fade out on Scene flashing
  * engine: consider fade out of an Audio function as Chaser step
  * engine: fixture definitions are now searched in the project folder too
  * UI/RGB Matrix Editor: fix dumping on a Sequence
  * UI/Sequence Editor: fix step values not sent to output/monitor
  * Virtual Console/Slider: fix crash when controlling non existing channels
  * Virtual Console/XY Pad: fix layout (thanks to Hans-Jürgen Tappe)
  * Virtual Console: fix copy of widgets background picture
  * Virtual Console/Speed Dial: improve tap tempo detection (thanks to Austin Wright)
  * Virtual Console/Speed Dial: fix time overflow above 1h11m
  * Virtual Console/Cue List: fix side fader feedbacks (thanks to Daniel Torlop)
  * Plugins: save IO lines by name and not by index (where possible)
  * Plugins/DMX USB: add support for COM485-PLUS2 product (thanks to David Turner)
  * Plugins/E1.31: ignore non DMX packets in input
  * Plugins/E1.31: fix universe input above 127
  * Plugins/HID: add support for Nodle R4S (thanks to qfulmina)
  * Plugins/HID: fix HID DMX support on Windows (thanks to Daniel Kirschten)
  * Plugins/MIDI: do not send notes twice when in note output mode (thanks to Edgar Aichinger)
  * Web Access: automatically reconnect on disconnection (thanks to João Pereira)
  * RGB scripts: added 'Fireworks' script (thanks to Hans-Jürgen Tappe)
  * New fixture: Chauvet COLORbar SMD (thanks to Yestalgia)
  * New fixture: lightmaXX Tour Spot ARC MKII (thanks to Tolmino Muccitelli)
  * New fixture: Eurolite LED SLS-7 HCL (thanks to René Schulze)
  * New fixture: Sagitter Slimpar 12DL (thanks to Lorenzo Bicci)
  * New fixture: Stairville CLB5 Compact LED Bar RGBW / RGBWW (thanks to Dominik Kerner)
  * New fixtures: Briteq BT-Vintage, Briteq BT-70LS (thanks to David Thomas)