@@ -5,6 +5,7 @@ qlcplus (4.12.5) stable; urgency=low
   * engine: consider fade out on Scene flashing
   * engine: consider fade out of an Audio function as Chaser step
   * engine: fixture definitions are now searched in the project folder too
+  * engine: properly terminate processes started by a Script
   * UI/RGB Matrix Editor: fix dumping on a Sequence
   * UI/Sequence Editor: fix step values not sent to output/monitor
   * Virtual Console/Slider: fix crash when controlling non existing channels
